[metadata]
name = ds_tools
version = attr: ds_tools.__version__.__version__
description = attr: ds_tools.__version__.__description__
url = https://github.com/dskrypa/ds_tools
project_urls =
    Source = https://github.com/dskrypa/ds_tools
    Issues = https://github.com/dskrypa/ds_tools/issues

long_description = file: readme.rst
long_description_content_type = text/x-rst
author = Doug Skrypa
author_email = dskrypa@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
include_package_data = True
# entry_points = file: entry_points.txt
packages = ds_tools
python_requires = >=3.11
install_requires =
    cli-command-parser
    db_cache @ git+https://github.com/dskrypa/db_cache
    requests_client @ git+https://github.com/dskrypa/requests_client
    beautifulsoup4
    bitarray
    cachetools
    psutil
    PyYAML
    requests
    SQLAlchemy
    tqdm
    tzlocal
    wrapt
    wcwidth

tests_require = testtools; coverage

[options.extras_require]
# ds_tools.fs.archives
archives =
    py7zr
    rarfile
    cryptography
    zstandard

# bin/cffi_test.py, bin/f3.py, examples/cffi/*
cffi =
    cffi

# ds_tools.argparsing.click_parsing
click =
    click
    click_option_group

# bash autocompletion
completion =
    argcomplete

# Development env requirements
dev =
    coverage
    ipython
    rich
    pre-commit

docs =
    sphinx

exif =
    exifread

flask =
    flask
    jinja2
    werkzeug

game_saves =
    send2trash
    watchdog
    zstandard

gunicorn =
    gevent
    gunicorn

images =
    imageio
    numpy
    pillow
    # package: skimage; required scipy, which breaks in python 3.10
    scikit-image; python_version < "3.10"
    # scipy

J2R =
    pykakasi

pdf =
    pypdf2

socketio =
    flask_socketio
    gevent

translate =
    googletrans

windows =
    pywin32

youtube =
    pytube3
